2004-07-31  Per Bothner  <per@bothner.com>

	* syntax.scm (catch):  Add type declarations.  Simplify using invoke.

2004-07-19  Per Bothner  <per@bothner.com>

	* numbers.scm (rationalize, sqrt, exact->inexact, inexact->exact):
	New functions, transcribed from Java code in kawa.standard.

2003-11-21  Per Bothner  <per@bothner.com>

	* ports.scm (call-with-input-file):  New functiom.
	(call-with-output-file):  Add type declaration.

2003-11-21  Hoehle, Joerg-Cyril <Joerg-Cyril.Hoehle@t-systems.com>

	* ports.scm (call-with-output-file):  New functiom.

2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* strings.scm (string-append, string-append/shared):  New functions.

2003-10-28  Per Bothner  <per@bothner.com>

	* files.scm (system-tmpdir):  Micro-optimization.

2003-09-23  Per Bothner  <per@bothner.com>

	* vectors.scm ((list->vector):  Don't hardwire in paramater type
	using primitive-constructor - since that now depends on JAVA2.

2003-08-20  Per Bothner  <per@bothner.com>

	* numbers.scm (positive?, modulo):  New functions.
	(quotient, remainder):  Generalize to <real> operands.
	Fixes Savannah bug #4867.
	(zero?, negative?):  Replace primitive-virtual-method by invoke.

2003-05-30  Per Bothner  <per@bothner.com>

	* lists.scm (car, cdr)  Use syntactic trick to give name to getter
	methods that are passed to define-procedure.
	* misc.scm (procedure-property):  Likewise.
	* ports.scm (port-line, input-port-line-number, input-port-prompter):
	Likewise.
	* vectors.scm (vector-ref):  Likewise.

	* syntax.scm (%defmacro):  Inline car, since it isn't defined until
	lists.scm, which is compiled later.

2003-04-05  Per Bothner  <per@bothner.com>

	* ports.scm (write-char):  Don't use writeSchemeObejct method.

2003-03-02  Per Bothner  <per@bothner.com>

	* misc.scm (base-uri):  New function.

2003-02-11  Per Bothner  <per@bothner.com>

	* syntax.scm (defmacro):  Move next to %defmacro.

2003-01-31  Per Bothner  <per@bothner.com>
